--- a/rootfs_overlay/etc/erlinit.config
+++ b/rootfs_overlay/etc/erlinit.config
@@ -1,7 +1,7 @@
 # Additional configuration for erlinit
 
 # Turn on the debug prints
-#-v
+-v
 
 # Specify where erlinit should send the IEx prompt. Only one may be enabled at
 # a time.
@@ -36,6 +36,9 @@
 
 # Optionally run a program if the Erlang VM exits
 #--run-on-exit /bin/sh
+
+--pre-run-exec "/sbin/modprobe g_cdc"
+#--pre-run-exec "/bin/sh /etc/mount.sh"
 
 # Enable UTF-8 filename handling in Erlang and custom inet configuration
 -e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc;ERL_CRASH_DUMP=/root/crash.dump
